Banner styling created, updated made to header and content added to the services page

--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -1,6 +1,7 @@
+.banner {
+    background-image: url("images/contact-header.jpg");
+}
 article {
-   width: 95%;
-    margin: auto;
     padding-bottom: 20px; 
 }
 .details {
