banner and services page made responsive

--- a/stylesheets/services.css
+++ b/stylesheets/services.css
@@ -19,14 +19,25 @@
     text-decoration: underline;
 }
 .link p {
-    padding: 0 10px;
+    margin: 0 10px;
     float: left;
     font-weight: bold;
     font-size: 26px;
     text-align: center;
+    width: 95%;
 }
 .link i {
     font-size: 40px;
     float: right;
     margin: 15px;
+}
+@media only screen and (max-width: 1115px) {
+    .link {
+        width: 49%;
+    }
+}
+@media only screen and (max-width: 775px) {
+    .link {
+        width: 100%;
+    }
 }
