--- a/stylesheets/standards.css
+++ b/stylesheets/standards.css
@@ -12,11 +12,10 @@ h1, h2, h3 {
     letter-spacing: 2px;
 }
 h2 {
-    font-size: 26px;
+    font-size: 36px;
 }
 p {
-    font-size: 20px;
-    text-align: justify;
+    font-size: 24px;
 }
 a {
     text-decoration: none;
@@ -47,6 +46,7 @@ header img {
     height: auto;
     float: left;
     padding-left: 2vw;
+    padding-top: 5px;
 }
 header img:hover {
     cursor: pointer;
@@ -57,7 +57,7 @@ header nav {
     width: 50vw;
     justify-content: space-between;
     max-height: 50%;
-    padding-top: 40px;
+    padding-top: 45px;
     padding-right: 2.5vw;
 }
 header li {
@@ -72,7 +72,7 @@ header li a {
 header .icon {
     display: none;
 }
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 870px) {
     .topnav {
         display: none;
     }
@@ -111,6 +111,9 @@ footer article {
     flex-wrap: wrap;
     padding: 25px 4vw;
 }
+footer article h2 {
+    font-size: 26px;
+}
 footer article section {
     min-width: 235px;
     margin-bottom: 20px;
@@ -145,28 +148,77 @@ footer article section div i {
     font-size: 28px;
     margin-right: 15px;
 }
+/*
+* Banner styling 
+*/
 .banner {
     height: 65vh;
     background-size: cover; 
     background-position: center;
     width: 100%;  
 }
-
 .title {
-    height: 30vh;
-    margin-top: 15vh;
+    height: 55vh;
+    margin-top: 5vh;
+    left: 5vw;
+    top: 105px;
     color: white;
     z-index: 2;
-    background-color: rgba(0,0,0, 0.6);
+    background-color: rgba(0,0,0, 0.4);
     position: absolute;
-    top: 105px;
-    left: 34vw;
-    width: 400px;
+    width: 90vw;
     text-align: center;
     border: 3px solid white;
 }
 .title h1 {
-    font-size: 50px;
+    font-size: 7vw;
     letter-spacing: 7px;
-    padding-top: 10vh;
+    padding-top: 20vh;
+}
+.title.responsive {
+    top: 250px;
+}
+@media only screen and (max-width: 1100px) {
+    .banner {
+        height: 60vh;
+    }
+    .title {
+        height: 50vh;
+    }
+}
+@media only screen and (max-width: 870px) {
+    .banner {
+        height: 55vh;
+    }
+    .title {
+        height: 45vh;
+    }
+    .title h1 {
+        padding-top: 18vh;
+        font-size: 8vw;
+    }
+}
+@media only screen and (max-width: 630px) {
+    .banner {
+        height: 50vh;
+    }
+    .title {
+        height: 40vh;
+    }
+    .title h1 {
+        padding-top: 16vh;
+        font-size: 10vw;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .banner {
+        height: 45vh;
+    }
+    .title {
+        height: 30vh;
+    }
+    .title h1 {
+        padding-top: 12vh;
+        font-size: 40px;
+    }
 }
