--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -41,3 +41,30 @@ main li {
 .services p, .services li {
     font-size: 18px;
 }
+@media only screen and (max-width: 1200px) {
+    .services p, .services li {
+        font-size: 20px;
+    }
+}
+@media only screen and (max-width: 900px) {
+    main section {
+        float: none;
+        margin-right: 0;
+        width: 100%;
+    }
+    main aside {
+        float: none;
+        width: 70%;
+        margin: auto;
+    }
+}
+@media only screen and (max-width: 600px) {
+    main aside {
+        width: 90%;
+    }
+}
+@media only screen and (max-width: 450px) {
+    main aside {
+        width: 100%;
+    }
+}
