--- a/stylesheets/caseStudyTemplate.css
+++ b/stylesheets/caseStudyTemplate.css
@@ -1,13 +1,22 @@
+article p {
+    margin-bottom: 30px;
+    text-align: center;
+}
+main article a {
+    color: black;
+    text-decoration: underline;
+}
 .testimonial {
     background-color: #d3000b;
     color: white;
     width: 80%;
-    margin: 10px auto;
+    margin: 50px auto;
     padding: 2%;
     border-radius: 10px;
 }
 .testimonial p {
     font-size: 22px;
+    margin-bottom: 20px;
 }
 .testimonial h3 {
     font-size: 20px;
@@ -22,6 +31,12 @@
 }
 .emergencyWorks {
     background-image: url("../stylesheets/images/wrecsam-banner.jpg");
+}
+.A55Sign {
+    background-image: url("../stylesheets/images/A55-banner.png");
+}
+.eiriasPark {
+    background-image: url("../stylesheets/images/eirias-banner.png");
 }
 @media only screen and (max-width: 355px) {
     .emergencyTitle {
