--- a/stylesheets/services.css
+++ b/stylesheets/services.css
@@ -1,13 +1,26 @@
-.banner.services {
-    background-image: url("images/services-header.jpg");
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-.banner.studies {
-    background-image: url("images/caseStudyBanner.jpg");
+.info img {
+    float: left;
+    width: 48%;
+    max-height: 70vh;
+}
+.info div {
+    float: right;
+    width: 48%;
+    text-align: justify;
+    margin-top: 50px;
 }
 .linksContainer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.linksContainer h2 {
+    width: 100%;
 }
 .link {
     width: 32%;
