--- a/stylesheets/standards.css
+++ b/stylesheets/standards.css
@@ -5,17 +5,17 @@ body {
 }
 h1, h2, h3, p {
     margin: 0;
-    margin-bottom: 16px;
+    margin-bottom: 40px;
 }
 h1, h2, h3 {
     font-family: 'Bebas Neue', cursive;
     letter-spacing: 2px;
 }
 h2 {
-    font-size: 36px;
+    font-size: 34px;
 }
 p {
-    font-size: 22px;
+    font-size: 24px;
 }
 a {
     text-decoration: none;
@@ -31,6 +31,9 @@ ul {
 li {
     list-style-type: none;
     margin-bottom: 5px;
+}
+img {
+    object-fit: cover;
 }
 /*
 * Header Styling
@@ -94,18 +97,23 @@ header .icon {
 /*
 * Main page styling
 */
-main {
+main article {
     width: 70%;
-    margin: 30px auto; 
+    padding: 50px 15%; 
 }
-@media only screen and (max-width: 870px) {
-    main {
+main article.grey {
+    background-color: #F0F0F0;
+}
+@media only screen and (max-width: 900px) {
+    main article {
         width: 80%;
+        padding: 30px 10%; 
     }
 }
 @media only screen and (max-width: 550px) {
-    main {
+    main article {
         width: 90%;
+        padding: 30px 5%; 
     }
 }
 /*
@@ -123,6 +131,7 @@ footer article {
 }
 footer article h2 {
     font-size: 26px;
+    margin-bottom: 15px;
 }
 footer article section {
     min-width: 235px;
@@ -160,7 +169,6 @@ footer article section div i {
     margin-right: 15px;
 }
 footer article.second {
-    padding: 0 4vw;
     justify-content: space-between;
 }
 footer article.second section{
@@ -168,6 +176,7 @@ footer article.second section{
 }
 footer article.second section p {
     font-size: 16px;
+    margin-bottom: 0;
 }
 footer article.second section span {
     font-size: 19px;
@@ -180,80 +189,22 @@ footer article.second section a {
 * Banner styling 
 */
 .banner {
-    height: 65vh;
-    background-size: cover; 
-    background-position: center;
-    width: 100%;  
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
 }
-.title {
-    height: 55vh;
-    margin-top: 5vh;
-    left: 4vw;
-    top: 105px;
-    color: white;
-    z-index: 2;
-    background-color: rgba(0,0,0, 0.4);
-    position: absolute;
-    width: 90vw;
+.banner h1 {
+    float: left;
+    width: 35%;
+    font-size: 6vw;
+    text-decoration: underline #d30009;
+    margin-top: 10vh;
     text-align: center;
-    border: 3px solid white;
 }
-.title h1 {
-    font-size: 7vw;
-    letter-spacing: 7px;
-    padding-top: 20vh;
-}
-.title.responsive {
-    top: 250px;
-}
-@media only screen and (max-width: 1100px) {
-    .banner {
-        height: 60vh;
-    }
-    .title {
-        height: 50vh;
-    }
-}
-@media only screen and (max-width: 870px) {
-    .banner {
-        height: 55vh;
-    }
-    .title {
-        height: 45vh;
-        left: 3vw;
-    }
-    .title h1 {
-        padding-top: 18vh;
-        font-size: 8vw;
-    }
-}
-@media only screen and (max-width: 630px) {
-    .banner {
-        height: 50vh;
-    }
-    .title {
-        height: 40vh;
-    }
-    .title h1 {
-        padding-top: 16vh;
-        font-size: 10vw;
-    }
-}
-@media only screen and (max-width: 500px) {
-    .banner {
-        height: 45vh;
-    }
-    .title {
-        height: 30vh;
-    }
-    .title h1 {
-        padding-top: 12vh;
-        font-size: 40px;
-    }
-}
-.divider {
-    width: 70%;
-    margin: 50px auto;
-    border: 3px solid #d30009;
-    border-radius: 15px;
+.banner img {
+    width: 65%;
+    max-height: 65vh;
+    float: right;
 }
