--- a/stylesheets/standards.css
+++ b/stylesheets/standards.css
@@ -102,7 +102,7 @@ main article {
     padding: 50px 15%; 
 }
 main article.grey {
-    background-color: #F0F0F0;
+    background-color: #E0E0E0;
 }
 @media only screen and (max-width: 900px) {
     main article {
