--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -1,6 +1,3 @@
-.banner {
-    background-image: url("images/contact-header.jpg");
-}
 article {
     padding-bottom: 20px; 
 }
@@ -12,6 +9,12 @@ article {
 }
 .details ul {
     font-size: 24px;
+}
+h2 {
+    margin-bottom: 20px;
+}
+form {
+    padding-bottom: 38px;
 }
 article form label, article form input[type="submit"] {
     font-family: 'Roboto', sans-serif;
