--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,8 +1,9 @@
-.homeOpen img {
+.homeOpen video {
     width: 100vw;
     height: 100vh;
     position: relative;
     top: 4px;
+    object-fit: cover;
 }
 .homeOpen div {
     
@@ -12,15 +13,16 @@
     animation-name: arrow;
     animation-duration: 1.5s;
     animation-iteration-count: infinite;
+    animation-delay: 40s;
 }
 .homeOpen div i {
     font-size: 60px;
-    color: #d3000b;
+    color: white;
 }
 @keyframes arrow {
     0% {bottom: 25px;}
     20% {bottom: 60px;}
-    40% {bottom: 35px;}
+    40% {bottom: 25px;}
     60% {bottom: 60px;}
     100% {bottom: 25px;}
 }
@@ -30,7 +32,7 @@
     flex-wrap: wrap;
 }
 .awards img {
-    height: 160px;
+    height: 120px;
     opacity: 0.5;
 }
 .awards img:hover {
