--- a/stylesheets/standards.css
+++ b/stylesheets/standards.css
@@ -15,7 +15,8 @@ h2 {
     font-size: 34px;
 }
 p {
-    font-size: 24px;
+    font-size: 20px;
+    line-height: 150%;
 }
 a {
     text-decoration: none;
@@ -49,7 +50,7 @@ header img {
     min-width: 90px;
     height: auto;
     float: left;
-    padding-left: 2vw;
+    padding-left: 7.5vw;
     padding-top: 5px;
 }
 header img:hover {
@@ -62,7 +63,7 @@ header nav {
     justify-content: space-between;
     max-height: 50%;
     padding-top: 45px;
-    padding-right: 2.5vw;
+    padding-right: 7.5vw;
 }
 header li {
     list-style-type: none;
@@ -85,7 +86,7 @@ header .icon {
         font-size: 50px;
         margin-top: 3vw;
         float: right;
-        margin-right: 2vw;
+        margin-right: 7.5vw;
     }
     .topnav.responsive {
         display: block;
@@ -99,22 +100,22 @@ header .icon {
 * Main page styling
 */
 main article {
-    width: 70%;
-    padding: 40px 15%; 
+    width: 60%;
+    padding: 90px 20%; 
 }
 main article.grey {
     background-color: #F0F0F0;
 }
 @media only screen and (max-width: 900px) {
     main article {
-        width: 80%;
-        padding: 30px 10%; 
+        width: 70%;
+        padding: 30px 15%; 
     }
 }
 @media only screen and (max-width: 550px) {
     main article {
-        width: 90%;
-        padding: 30px 5%; 
+        width: 80%;
+        padding: 30px 10%; 
     }
 }
 /*
@@ -195,7 +196,7 @@ footer article.second section a {
 }
 .banner h1 {
     width: 100%;
-    font-size: 78px;
+    font-size: 68px;
     text-decoration: underline #d30009;
     margin-top: 5vh;
     margin-bottom: 5vh;
