--- a/stylesheets/standards.css
+++ b/stylesheets/standards.css
@@ -129,44 +129,21 @@ footer article {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 20px 4vw;
+    padding: 15px 4vw;
 }
 footer article h2 {
     font-size: 26px;
     margin-bottom: 15px;
 }
 footer article section {
-    min-width: 235px;
-    margin-bottom: 20px;
+    width: max-content;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 footer article section li {
     font-size: 20px;
 }
-footer article section.form {
-    width: 350px;
-    max-width: 70vw;
-    margin-bottom: 0;
-}
-footer article section form input, footer article section form textarea {
-    width: 100%;
-    margin-bottom: 5px;
-}
-footer article section form textarea {
-    height: 80px;
-}
-footer article section form label {
-    margin-top: 5px;
-}
-footer article section form input[type = "submit"] {
-    width: 30%;
-    float: right;
-    border: none;
-    background-color: #d30009;
-    color: white;
-    font-size: 16px;
-    padding: 5px;
-}
-footer article section div i {
+footer article section ul li  i {
     font-size: 28px;
     margin-right: 15px;
 }
