Updates made to the head and footer of each page, back buttons added to serives and case study pages

--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -7,8 +7,11 @@ article {
     flex-wrap: wrap;
     padding-bottom: 90px;
 }
+.details section {
+    margin-right: 10px;
+}
 .details ul {
-    font-size: 24px;
+    font-size: 20px;
 }
 h2 {
     margin-bottom: 20px;
@@ -24,7 +27,7 @@ article form label, article form input[type="submit"] {
 article form input, article form textarea {
     width: 100%;
     margin: 7px 0;
-    
+    padding: 5px;
 }
 article form textarea {
     height: 200px;
