--- a/stylesheets/caseStudyTemplate.css
+++ b/stylesheets/caseStudyTemplate.css
@@ -10,15 +10,16 @@ main article a {
     background-color: #d3000b;
     color: white;
     width: 100%;
-    padding: 2%;
+    padding: 50px 5%;
     border-radius: 10px;
 }
 .testimonial p {
     font-size: 20px;
     margin-bottom: 20px;
+    text-align: left;
 }
 .testimonial h3 {
-    font-size: 20px;
+    font-size: 22px;
     text-align: right;
     margin-bottom: 0;
 }
