--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -45,7 +45,7 @@
     flex-wrap: wrap;
 }
 .awards img {
-    height: 140px;
+    height: 120px;
     opacity: 0.5;
 }
 .awards img:hover {
@@ -61,15 +61,16 @@
 }
 .featuredStudy div {
     margin-left: 30px;
-    margin-top: 11vh;
     width: 50%;
+}
+.featuredStudy div h2 {
+    text-decoration: underline #d3000b 3px;
 }
 .featuredStudy div p {
     text-align: justify;
 }
 .featuredStudy div a {
-    color: black;
-    text-decoration: underline #d3000b 3px;
+    color: black;  
     font-size: 20px;
     float: right;
     font-weight: bold;
@@ -83,17 +84,17 @@
     width: 100%;
 }
 .ourValues img {
-    width: 40%;
+    width: 50%;
+    margin-top: 7%;
+    height: max-content;
     float: right;
-    margin-top: 20px;
     box-shadow: 7px 8px 8px 0 rgb(0 0 0 / 38%), 0 6px 20px 0 rgb(0 0 0 / 38%);
-
 }
 .values {
     font-size: 20px;
-    width: 48%;
-    margin-left: 2%;
-    line-height: 150%;
+    width: 45%;
+    margin-right: 2%;
+    line-height: 130%;
     margin-top: 35px;
 }
 .values li {
